feat(registro): módulo de registro automático con OCR simulado